<resources>
    <string name="app_name">StreepjesBlad</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello World!</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="nameTextView">*Naam*</string>
    <string name="redbullBtn">RedBull</string>
    <string name="frisdrankBtn">Frisdrank</string>
    <string name="beerBtn">Pintje</string>
    <string name="kriekBtn">Kriek</string>
    <string name="chipsBtn">Chips</string>
    <string name="otherBtn">Anders</string>
    <string name="aantalStrTextView">Aantal streepjes:</string>
    <string name="amountTextView">0</string>
    <string name="welcomeTextView">Welkom bij het streepjesblad!</string>
    <string name="loginBtn">Login</string>
    <string name="registerBtn">Registreer</string>
    <string name="welcome">Welcome %1$s!</string>
    <string name="sum">€ %1$d</string>
</resources>