<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/nameTextView"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/redbullButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/redbullBtn"
        app:layout_constraintEnd_toStartOf="@+id/frisdrankButton"
        app:layout_constraintTop_toTopOf="@+id/frisdrankButton" />

    <Button
        android:id="@+id/frisdrankButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/frisdrankBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameTextView" />

    <Button
        android:id="@+id/beerButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/beerBtn"
        app:layout_constraintStart_toEndOf="@+id/frisdrankButton"
        app:layout_constraintTop_toTopOf="@+id/frisdrankButton" />

    <Button
        android:id="@+id/kriekButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/kriekBtn"
        app:layout_constraintStart_toStartOf="@+id/redbullButton"
        app:layout_constraintTop_toBottomOf="@+id/redbullButton" />

    <Button
        android:id="@+id/chipsButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/chipsBtn"
        app:layout_constraintStart_toEndOf="@+id/kriekButton"
        app:layout_constraintTop_toBottomOf="@+id/frisdrankButton" />

    <Button
        android:id="@+id/otherButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/otherBtn"
        app:layout_constraintStart_toEndOf="@+id/chipsButton"
        app:layout_constraintTop_toBottomOf="@+id/beerButton" />

    <TextView
        android:id="@+id/aantalStrTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/aantalStrTextView"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/kriekButton"
        app:layout_constraintTop_toBottomOf="@+id/kriekButton" />

    <TextView
        android:id="@+id/amountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:text="@string/amountTextView"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/aantalStrTextView"
        app:layout_constraintTop_toTopOf="@+id/aantalStrTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>